zebra-state/src/service/finalized_state/disk_format/tests/snapshots/empty_column_families@no_blocks.snap
---
source: zebra-state/src/service/finalized_state/disk_format/tests/snapshot.rs
expression: empty_column_families
---
[
  "balance_by_transparent_addr: no entries",
  "block_header_by_height: no entries",
  "hash_by_height: no entries",
  "hash_by_tx_loc: no entries",
  "height_by_hash: no entries",
  "history_node: no entries",
  "history_tree: no entries",
  "orchard_anchors: no entries",
  "orchard_note_commitment_subtree: no entries",
  "orchard_note_commitment_tree: no entries",
  "orchard_nullifiers: no entries",
  "sapling_anchors: no entries",
  "sapling_note_commitment_subtree: no entries",
  "sapling_note_commitment_tree: no entries",
  "sapling_nullifiers: no entries",
  "sprout_anchors: no entries",
  "sprout_note_commitment_tree: no entries",
  "sprout_nullifiers: no entries",
  "tip_chain_value_pool: no entries",
  "tx_by_loc: no entries",
  "tx_loc_by_hash: no entries",
  "tx_loc_by_spent_out_loc: no entries",
  "tx_loc_by_transparent_addr_loc: no entries",
  "utxo_by_out_loc: no entries",
  "utxo_loc_by_transparent_addr_loc: no entries",
]
